--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       <div id="message-input">
         <input type="text" id="message" placeholder="Type your message..." />
         <button onclick="sendMessage()">Send</button>
-        <button class="video-call-btn" onclick="window.open('https://meet.jit.si/GRWCChurchConference', '_blank')">
+        <button class="video-call-btn" onclick="window.open('https://meet.google.com/fks-toaf-kxn', '_blank')">
           <i class="fas fa-video"></i>
         </button>
       </div>
