--- a/vibe.html
+++ b/vibe.html
@@ -6456,8 +6456,8 @@ function showLocalNotification(title, body, chatId = null) {
   
   const options = {
     body: body,
-    icon: 'https://cdn-icons-png.flaticon.com/512/733/733585.png',
-    badge: 'https://cdn-icons-png.flaticon.com/512/733/733585.png',
+    icon: '/videochat/icon.png',
+    badge: '/videochat/badge.png',
     tag: chatId || 'chat-notification',
     renotify: true,
     vibrate: [200, 100, 200],
